--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,33 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+<nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+  <div class="container">
+    <a href="index.html" class="navbar-brand">Kinkon</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navNavbar">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a href="index.html" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item active">
+          <a href="about.html" class="nav-link">About Us</a>
+        </li>
+        <li class="nav-item active">
+          <a href="Serices.html" class="nav-link">Services</a>
+        </li>
+        <li class="nav-item active">
+          <a href="Blog.html" class="nav-link">Blog</a>
+        </li>
+        <li class="nav-item active">
+          <a href="contact.html" class="nav-link">Contact</a>
+        </li>
+      </ul>
+
+    </div>
+
+  </div>
+</nav>
 
 <body>
 
