--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Gongorè</title>
+  <title>Seriyanke</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+<!--NAVBAR STARTS HERE-->
+<nav class="navbar navbar-expand-sm navbar-dark bg-info">
   <div class="container">
-    <a href="index.html" class="navbar-brand">Kinkon</a>
+    <a href="index.html" class="navbar-brand">Seriyanke</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navNavbar">
       <ul class="navbar-nav ml-auto">
@@ -37,6 +38,143 @@
 
   </div>
 </nav>
+
+
+
+<!--SHOWCASE SLIDER STARTS HERE-->
+<section id="showcase">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item carousel-image-1 active">
+        <div class="container">
+          <div class=" carousel-caption d-none d-sm-block text-left mb-5">
+            <h1 class="display-3">First Heading </h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
+              architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
+            <a href="#" class="btn btn-primary btn-lg">Sign Up Now</a>
+
+
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item carousel-image-2 ">
+        <div class="container">
+          <div class=" carousel-caption d-none d-sm-block text-center mb-5">
+            <h1 class="display-3">First Heading </h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
+              architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
+            <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+
+
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item carousel-image-3 ">
+        <div class="container">
+          <div class=" carousel-caption d-none d-sm-block text-right mb-5">
+            <h1 class="display-3">Third Heading </h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
+              architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
+            <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <a href="#myCarousel" data-slide="prev" class="carousel-control-prev">
+      <span class="carousel-control-prev-icon"></span>
+    </a>
+
+
+    <a href="#myCarousel" data-slide="next" class="carousel-control-next">
+      <span class="carousel-control-next-icon"></span>
+    </a>
+
+
+  </div>
+</section>
+
+
+
+<!--HOME ICON SECTION STARTS HERE-->
+<section id="home-icons" class="py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4 text-center">
+        <i class="fa fa-cog mb-2 text-dark"></i>
+        <h3>Turning Gears</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+      </div>
+      <div class="col-md-4 mb-4 text-center">
+        <i class="fa fa-cart-plus mb-2 text-dark"></i>
+        <h3>Making Money</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+      </div>
+      <div class="col-md-4 mb-4 text-center">
+        <i class="fa fa-cloud mb-2 text-info"></i>
+        <h3>Sending Data</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!--HOME HEADING SECTION STARTS HERE-->
+<section id="home-heading" class="p-5">
+  <div class="dark-overlay">
+    <div class="row">
+      <div class="col">
+        <div class="container pt-5">
+          <h1>Are You Ready To Get Started?</h1>
+          <p class="d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita voluptates,
+            consequatur labore placeat doloremque dignissimos exercitationem esse fuga laborum ex!</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!--INFO SECTION STARTS HERE-->
+<section id="info" class="py-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 align-self-center">
+        <h3>Lorem Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae eaque quos eligendi,
+          laboriosam. Culpa consequuntur illum facere id molestias.</p>
+        <a href="#" class="btn btn-outline-primary btn-lg">Learn More</a>
+      </div>
+      <div class="col-md-6">
+        <img src="images/laptop.png" alt="" class="img-fluid">
+      </div>
+    </div>
+  </div>
+</section>
+<!-- VIDEO PLAY SECTION STARTS HERE -->
+<section id="video-play">
+  <div class="dark-overlay">
+    <div class="row">
+      <div class="col">
+        <div class="container p-5">
+          <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal"
+            data-target="#videoModal">
+            <i class="fa fa-play"></i>
+          </a>
+          <h1>See What We Do</h1>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <body>
 
