--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,68 @@
     </div>
   </div>
 </section>
+<!-- PHOTO GALLERY SECTION STARTS HERE -->
+<section id="gallery" class="py-5">
+  <div class="container">
+    <h1 class="text-center">Photo Gallery</h1>
+    <p class="text-center">Check out our photos</p>
+    <div class="row mb-4">
+      <div class="col-md-4">
+        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
+          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
+          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
+          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
+        </a>
+      </div>
+    </div>
+    <div class="row mb-4">
+      <div class="col-md-4">
+        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
+          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
+          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="https://picsum.photos/?random" data-toggle="lightbox" data-gallery="img-gallery">
+          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- NEWSLETTER SECTION STARTS HERE -->
+<section id="newsletter" class="text-center p-5 bg-info text-white">
+  <div class="contaainer">
+    <div class="row">
+      <div class="col">
+        <h1>Signup For Our Newsletter</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis magnam similique esse assumenda quasi
+          repellendus illum perferendis quos aliquid possimus.</p>
+        <form class="form-inline justify-content-center">
+          <label for="name" class="sr-only">Name</label>
+          <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Enter Name Hier">
+
+          <label for="email" class="sr-only">Email</label>
+          <input type="email" class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Enter Email Hier">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <body>
 
