--- a/src/index.html
+++ b/src/index.html
@@ -236,6 +236,16 @@
     </div>
   </div>
 </section>
+<!-- FOOTER SECTION STARTS HERE -->
+<footer id="main-footer" class="text-center p-4">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <p>Copyright 2018 &copy; Kinkon</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 
 <body>
