--- a/src/index.html
+++ b/src/index.html
@@ -8,252 +8,269 @@
   <title>Seriyanke</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.css" />
   <link rel="stylesheet" href="css/style.css">
 </head>
-<!--NAVBAR STARTS HERE-->
-<nav class="navbar navbar-expand-sm navbar-dark bg-info">
-  <div class="container">
-    <a href="index.html" class="navbar-brand">Seriyanke</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navNavbar">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a href="index.html" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a href="about.html" class="nav-link">About Us</a>
-        </li>
-        <li class="nav-item active">
-          <a href="Serices.html" class="nav-link">Services</a>
-        </li>
-        <li class="nav-item active">
-          <a href="Blog.html" class="nav-link">Blog</a>
-        </li>
-        <li class="nav-item active">
-          <a href="contact.html" class="nav-link">Contact</a>
-        </li>
-      </ul>
-
-    </div>
-
-  </div>
-</nav>
-
-
-
-<!--SHOWCASE SLIDER STARTS HERE-->
-<section id="showcase">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item carousel-image-1 active">
-        <div class="container">
-          <div class=" carousel-caption d-none d-sm-block text-left mb-5">
-            <h1 class="display-3">First Heading </h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
-              architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-            <a href="#" class="btn btn-primary btn-lg">Sign Up Now</a>
-
-
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item carousel-image-2 ">
-        <div class="container">
-          <div class=" carousel-caption d-none d-sm-block text-center mb-5">
-            <h1 class="display-3">First Heading </h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
-              architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-            <a href="#" class="btn btn-primary btn-lg">Learn More</a>
-
-
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item carousel-image-3 ">
-        <div class="container">
-          <div class=" carousel-caption d-none d-sm-block text-right mb-5">
-            <h1 class="display-3">Third Heading </h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
-              architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-            <a href="#" class="btn btn-primary btn-lg">Learn More</a>
-
-
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <a href="#myCarousel" data-slide="prev" class="carousel-control-prev">
-      <span class="carousel-control-prev-icon"></span>
-    </a>
-
-
-    <a href="#myCarousel" data-slide="next" class="carousel-control-next">
-      <span class="carousel-control-next-icon"></span>
-    </a>
-
-
-  </div>
-</section>
-
-
-
-<!--HOME ICON SECTION STARTS HERE-->
-<section id="home-icons" class="py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-4 text-center">
-        <i class="fa fa-cog mb-2 text-dark"></i>
-        <h3>Turning Gears</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
-      </div>
-      <div class="col-md-4 mb-4 text-center">
-        <i class="fa fa-cart-plus mb-2 text-dark"></i>
-        <h3>Making Money</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
-      </div>
-      <div class="col-md-4 mb-4 text-center">
-        <i class="fa fa-cloud mb-2 text-info"></i>
-        <h3>Sending Data</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<!--HOME HEADING SECTION STARTS HERE-->
-<section id="home-heading" class="p-5">
-  <div class="dark-overlay">
-    <div class="row">
-      <div class="col">
-        <div class="container pt-5">
-          <h1>Are You Ready To Get Started?</h1>
-          <p class="d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita voluptates,
-            consequatur labore placeat doloremque dignissimos exercitationem esse fuga laborum ex!</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!--INFO SECTION STARTS HERE-->
-<section id="info" class="py-3">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 align-self-center">
-        <h3>Lorem Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae eaque quos eligendi,
-          laboriosam. Culpa consequuntur illum facere id molestias.</p>
-        <a href="#" class="btn btn-outline-primary btn-lg">Learn More</a>
-      </div>
-      <div class="col-md-6">
-        <img src="images/laptop.png" alt="" class="img-fluid">
-      </div>
-    </div>
-  </div>
-</section>
-<!-- VIDEO PLAY SECTION STARTS HERE -->
-<section id="video-play">
-  <div class="dark-overlay">
-    <div class="row">
-      <div class="col">
-        <div class="container p-5">
-          <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal"
-            data-target="#videoModal">
-            <i class="fa fa-play"></i>
-          </a>
-          <h1>See What We Do</h1>
-
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- PHOTO GALLERY SECTION STARTS HERE -->
-<section id="gallery" class="py-5">
-  <div class="container">
-    <h1 class="text-center">Photo Gallery</h1>
-    <p class="text-center">Check out our photos</p>
-    <div class="row mb-4">
-      <div class="col-md-4">
-        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
-          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
-          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
-          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
-        </a>
-      </div>
-    </div>
-    <div class="row mb-4">
-      <div class="col-md-4">
-        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
-          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="https://picsum.photos/" data-toggle="lightbox" data-gallery="img-gallery">
-          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="https://picsum.photos/?random" data-toggle="lightbox" data-gallery="img-gallery">
-          <img src="https://picsum.photos/600/600/?random" alt="" class="img-fluid">
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- NEWSLETTER SECTION STARTS HERE -->
-<section id="newsletter" class="text-center p-5 bg-info text-white">
-  <div class="contaainer">
-    <div class="row">
-      <div class="col">
-        <h1>Signup For Our Newsletter</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis magnam similique esse assumenda quasi
-          repellendus illum perferendis quos aliquid possimus.</p>
-        <form class="form-inline justify-content-center">
-          <label for="name" class="sr-only">Name</label>
-          <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Enter Name Hier">
-
-          <label for="email" class="sr-only">Email</label>
-          <input type="email" class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Enter Email Hier">
-          <button class="btn btn-primary" type="submit">Submit</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- FOOTER SECTION STARTS HERE -->
-<footer id="main-footer" class="text-center p-4">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <p>Copyright 2018 &copy; Kinkon</p>
-      </div>
-    </div>
-  </div>
-</footer>
-
 
 <body>
+  <!--NAVBAR STARTS HERE-->
+  <nav class="navbar navbar-expand-sm navbar-dark bg-info">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">Seriyanke</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navNavbar">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a href="about.html" class="nav-link">About Us</a>
+          </li>
+          <li class="nav-item active">
+            <a href="Serices.html" class="nav-link">Services</a>
+          </li>
+          <li class="nav-item active">
+            <a href="Blog.html" class="nav-link">Blog</a>
+          </li>
+          <li class="nav-item active">
+            <a href="contact.html" class="nav-link">Contact</a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+  </nav>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+
+  <!--SHOWCASE SLIDER STARTS HERE-->
+  <section id="showcase">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item carousel-image-1 active">
+          <div class="container">
+            <div class=" carousel-caption d-none d-sm-block text-left mb-5">
+              <h1 class="display-3">First Heading </h1>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
+                architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
+              <a href="#" class="btn btn-primary btn-lg">Sign Up Now</a>
+
+
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item carousel-image-2 ">
+          <div class="container">
+            <div class=" carousel-caption d-none d-sm-block text-center mb-5">
+              <h1 class="display-3">First Heading </h1>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
+                architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
+              <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+
+
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item carousel-image-3 ">
+          <div class="container">
+            <div class=" carousel-caption d-none d-sm-block text-right mb-5">
+              <h1 class="display-3">Third Heading </h1>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
+                architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
+              <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <a href="#myCarousel" data-slide="prev" class="carousel-control-prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+
+
+      <a href="#myCarousel" data-slide="next" class="carousel-control-next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+
+
+    </div>
+  </section>
+
+
+
+  <!--HOME ICON SECTION STARTS HERE-->
+  <section id="home-icons" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fa fa-cog mb-2 text-dark"></i>
+          <h3>Turning Gears</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+        </div>
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fa fa-cart-plus mb-2 text-dark"></i>
+          <h3>Making Money</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+        </div>
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fa fa-cloud mb-2 text-info"></i>
+          <h3>Sending Data</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--HOME HEADING SECTION STARTS HERE-->
+  <section id="home-heading" class="p-5">
+    <div class="dark-overlay">
+      <div class="row">
+        <div class="col">
+          <div class="container pt-5">
+            <h1>Are You Ready To Get Started?</h1>
+            <p class="d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita voluptates,
+              consequatur labore placeat doloremque dignissimos exercitationem esse fuga laborum ex!</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!--INFO SECTION STARTS HERE-->
+  <section id="info" class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 align-self-center">
+          <h3>Lorem Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae eaque quos eligendi,
+            laboriosam. Culpa consequuntur illum facere id molestias.</p>
+          <a href="#" class="btn btn-outline-primary btn-lg">Learn More</a>
+        </div>
+        <div class="col-md-6">
+          <img src="images/laptop.png" alt="" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- VIDEO PLAY SECTION STARTS HERE -->
+  <section id="video-play">
+    <div class="dark-overlay">
+      <div class="row">
+        <div class="col">
+          <div class="container p-5">
+            <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal"
+              data-target="#videoModal">
+              <i class="fa fa-play"></i>
+            </a>
+            <h1>See What We Do</h1>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- PHOTO GALLERY SECTION STARTS HERE -->
+  <section id="gallery" class="py-5">
+    <section id="gallery" class="py-5">
+      <div class="container">
+        <h1 class="text-center">Photo Gallery</h1>
+        <p class="text-center">Check out our photos</p>
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <a href="http://lorempixel.com/560/560/business/1" data-toggle="lightbox" data-gallery="img-gallery">
+              <img src="http://lorempixel.com/600/600/business/1" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="http://lorempixel.com/560/560/business/2" data-toggle="lightbox" data-gallery="img-gallery">
+              <img src="http://lorempixel.com/600/600/business/2" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="http://lorempixel.com/560/560/business/3" data-toggle="lightbox" data-gallery="img-gallery">
+              <img src="http://lorempixel.com/600/600/business/3" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <a href="http://lorempixel.com/560/560/business/4" data-toggle="lightbox" data-gallery="img-gallery">
+              <img src="http://lorempixel.com/600/600/business/4" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="http://lorempixel.com/600/600/business/5" data-toggle="lightbox" data-gallery="img-gallery">
+              <img src="http://lorempixel.com/600/600/business/5" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="http://lorempixel.com/560/560/business/6" data-toggle="lightbox" data-gallery="img-gallery">
+              <img src="http://lorempixel.com/600/600/business/6" class="img-fluid">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- NEWSLETTER SECTION STARTS HERE -->
+    <section id="newsletter" class="text-center p-5 bg-info text-white">
+      <div class="contaainer">
+        <div class="row">
+          <div class="col">
+            <h1>Signup For Our Newsletter</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis magnam similique esse assumenda
+              quasi
+              repellendus illum perferendis quos aliquid possimus.</p>
+            <form class="form-inline justify-content-center">
+              <label for="name" class="sr-only">Name</label>
+              <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Enter Name Hier">
+
+              <label for="email" class="sr-only">Email</label>
+              <input type="email" class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Enter Email Hier">
+              <button class="btn btn-primary" type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- FOOTER SECTION STARTS HERE -->
+    <footer id="main-footer" class="text-center p-4">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p>Copyright 2018 &copy; Kinkon</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- VIDEO MODAL SECTION STARTS HERE -->
+    <div class="modal fade" id="videoModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <button class="close" data-dismiss="modal"><span>&times;</span></button>
+            <iframe src="" height="350" width="100%" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
