added testimonials section

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Seriyanke</title>
+  <title>Kinkon</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.css" />
@@ -16,7 +16,7 @@
   <!--NAVBAR STARTS HERE-->
   <nav class="navbar navbar-expand-sm navbar-dark bg-info">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Seriyanke</a>
+      <a href="index.html" class="navbar-brand">Kinkon</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navNavbar">
         <ul class="navbar-nav ml-auto">
