--- a/src/about.html
+++ b/src/about.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Seriyanke</title>
+  <title>Kinkon</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.css" />
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/slick-theme.css">
+  <link rel="stylesheet" href="css/slick.css">
 </head>
 
 <body>
   <!--NAVBAR STARTS HERE-->
   <nav class="navbar navbar-expand-sm navbar-dark bg-info">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Seriyanke</a>
+      <a href="index.html" class="navbar-brand">Kinkon</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navNavbar">
         <ul class="navbar-nav ml-auto">
@@ -71,6 +73,118 @@
       </div>
     </div>
   </section>
+  <!-- ICON BOXES SECTION STARTS HERE -->
+  <div id="icon-boxes" class="p-5">
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col-md-4">
+          <div class="card bg-dark text-center text-white">
+            <div class="card-body">
+              <i class="fa fa-building"> </i>
+              <h3>Lorem ipsum</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, architecto.
+
+
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card bg-dark text-center text-white">
+            <div class="card-body">
+              <i class="fa fa-comments"> </i>
+              <h3>Lorem ipsum</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, architecto.
+
+
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card bg-dark text-center text-white">
+            <div class="card-body">
+              <i class="fa fa-bullhorn"> </i>
+              <h3>Lorem ipsum</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, architecto.
+
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="row mb-4">
+        <div class="col-md-4">
+          <div class="card bg-dark text-center text-white">
+            <div class="card-body">
+              <i class="fa fa-clock-o"> </i>
+              <h3>Lorem ipsum</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, architecto.
+
+
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card bg-dark text-center text-white">
+            <div class="card-body">
+              <i class="fa fa-coffee"> </i>
+              <h3>Lorem ipsum</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, architecto.
+
+
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card bg-dark text-center text-white">
+            <div class="card-body">
+              <i class="fa fa-cc"> </i>
+              <h3>Lorem ipsum</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, architecto.
+
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- TESTIMONIALS SECTION STARTS HERE -->
+  <section id="testimonial-section" class="p-4 bg-danger pt-5 text-white">
+    <div class="container">
+      <h2 class="text-center">
+        <div class="row">
+          <div class="col">
+            <div class="slider">
+              <div>
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, sunt!</p>
+                  <footer class="blockquote-footer"><cite title="bhantal">Bhantal</cite></footer>
+                </blockquote>
+
+              </div>
+              <div>
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, sunt!</p>
+                  <footer class="blockquote-footer"><cite title="pottal">Pottal</cite></footer>
+                </blockquote>
+
+              </div>
+              <div>
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, sunt!</p>
+                  <footer class="blockquote-footer"><cite title="immital">Immital</cite></footer>
+                </blockquote>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </h2>
+    </div>
+  </section>
+
 
 
 
@@ -91,6 +205,7 @@
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.js"></script>
+  <script src="js/slick.js"></script>
   <script src="js/main.js"></script>
 </body>
 
