--- a/src/about.html
+++ b/src/about.html
@@ -29,10 +29,10 @@
             <a href="about.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item active">
-            <a href="Serices.html" class="nav-link">Services</a>
+            <a href="services.html" class="nav-link">Services</a>
           </li>
           <li class="nav-item active">
-            <a href="Blog.html" class="nav-link">Blog</a>
+            <a href="blog.html" class="nav-link">Blog</a>
           </li>
           <li class="nav-item active">
             <a href="contact.html" class="nav-link">Contact</a>
@@ -151,7 +151,7 @@
     </div>
   </div>
   <!-- TESTIMONIALS SECTION STARTS HERE -->
-  <section id="testimonial-section" class="p-4 bg-danger pt-5 text-white">
+  <section id="testimonial-section" class="p-4 bg-danger text-white">
     <div class="container">
       <h2 class="text-center">
         <div class="row">
