--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
             <a href="about.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item active">
-            <a href="Serices.html" class="nav-link">Services</a>
+            <a href="services.html" class="nav-link">Services</a>
           </li>
           <li class="nav-item active">
-            <a href="Blog.html" class="nav-link">Blog</a>
+            <a href="blog.html" class="nav-link">Blog</a>
           </li>
           <li class="nav-item active">
             <a href="contact.html" class="nav-link">Contact</a>
