--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!--NAVBAR STARTS HERE-->
-  <nav class="navbar navbar-expand-sm navbar-dark bg-info">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
     <div class="container">
       <a href="index.html" class="navbar-brand">Kinkon</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
@@ -59,7 +59,7 @@
               <h1 class="display-3">First Heading </h1>
               <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
                 architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-              <a href="#" class="btn btn-primary btn-lg">Sign Up Now</a>
+              <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
 
 
             </div>
@@ -71,7 +71,7 @@
               <h1 class="display-3">First Heading </h1>
               <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
                 architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-              <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+              <a href="#" class="btn btn-danger btn-lg">Learn More</a>
 
 
             </div>
@@ -83,7 +83,7 @@
               <h1 class="display-3">Third Heading </h1>
               <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur
                 architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-              <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+              <a href="#" class="btn btn-danger btn-lg">Learn More</a>
 
 
             </div>
@@ -122,7 +122,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fa fa-cloud mb-2 text-info"></i>
+          <i class="fa fa-cloud mb-2 text-dark"></i>
           <h3>Sending Data</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
         </div>
@@ -153,7 +153,7 @@
           <h3>Lorem Ipsum</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae eaque quos eligendi,
             laboriosam. Culpa consequuntur illum facere id molestias.</p>
-          <a href="#" class="btn btn-outline-primary btn-lg">Learn More</a>
+          <a href="#" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
           <img src="images/laptop.png" alt="" class="img-fluid">
@@ -209,7 +209,7 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="http://lorempixel.com/600/600/business/5" data-toggle="lightbox" data-gallery="img-gallery">
+            <a href="http://lorempixel.com/560/560/business/5" data-toggle="lightbox" data-gallery="img-gallery">
               <img src="http://lorempixel.com/600/600/business/5" class="img-fluid">
             </a>
           </div>
@@ -223,7 +223,7 @@
     </section>
 
     <!-- NEWSLETTER SECTION STARTS HERE -->
-    <section id="newsletter" class="text-center p-5 bg-info text-white">
+    <section id="newsletter" class="text-center p-5 bg-danger text-white">
       <div class="contaainer">
         <div class="row">
           <div class="col">
