--- a/src/services.html
+++ b/src/services.html
@@ -16,7 +16,7 @@
 
 <body>
   <!--NAVBAR STARTS HERE-->
-  <nav class="navbar navbar-expand-sm navbar-dark bg-info">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
     <div class="container">
       <a href="index.html" class="navbar-brand">Kinkon</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar"><span class="navbar-toggler-icon"></span></button>
